--- a/compose.yml
+++ b/compose.yml
@@ -22,29 +22,26 @@ services:
       - ./database/flyway/migrations/:/flyway/migrations
     depends_on:
       - db
-  kafka:
-    image: bitnami/kafka:latest
-    container_name: kafka
+  localstack:
+    image: localstack/localstack
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack-main}"
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # external services port range
+    environment:
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - DEBUG=${DEBUG:-0}
     volumes:
-      - kafkadata:/bitnami/kafka
-    ports:
-      - "9092:9092"
-    environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    container_name: kafka-ui
-    ports:
-      - 8080:8080
-    environment:
-      DYNAMIC_CONFIG_ENABLED: "true"
+      - "${LOCALSTACK_VOLUME_DIR:-./localstack}:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+  localstack_init:
+    image: amazonlinux:2
+    container_name: localstack-init
+    command: /bin/bash /localstack-init.sh
+    volumes:
+      - ./localstack-init.sh:/localstack-init.sh
     depends_on:
-      - kafka
+      - localstack
   main_banking_service:
     image: eclipse-temurin:21
     container_name: main-banking-service
@@ -56,7 +53,7 @@ services:
       - ./main-banking-service:/app
     depends_on:
       - db
-      - kafka
+      - localstack_init
   reporting_service:
     image: eclipse-temurin:21
     container_name: reporting-service
@@ -68,7 +65,7 @@ services:
       - ./reporting-service:/app
     depends_on:
       - db
-      - kafka
+      - localstack_init
   bank_partner_service:
     image: mcr.microsoft.com/dotnet/sdk:8.0
     container_name: bank-partner-service
@@ -82,7 +79,7 @@ services:
       - ./bank-partner-service:/app
     depends_on:
       - db
-      - kafka
+      - localstack_init
       - reporting_service
   bank_manager_portal:
     image: node:20
@@ -102,4 +99,3 @@ services:
       - reporting_service
 volumes:
   dbdata:
-  kafkadata:
