--- a/.github/workflows/flyway-migrate.yml
+++ b/.github/workflows/flyway-migrate.yml
@@ -13,10 +13,10 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     env:
-      FLYWAY_URL: jdbc:sqlserver://${{ secrets.AWS_RDS_ENDPOINT }}:${{ secrets.DB_PORT }};databaseName=ApitelDB
+      FLYWAY_URL: jdbc:sqlserver://${{secrets.AWS_RDS_ENDPOINT}}:1433;authentication=sqlPassword;databaseName=ApitelDB
       FLYWAY_USER: ${{ secrets.DB_USERNAME }}
       FLYWAY_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      FLYWAY_LOCATION: filesystem:database/flyway/migrations
+      FLYWAY_LOCATION: filesystem:database/flyway
     defaults:
       run:
         shell: bash
