--- a/.github/workflows/flyway-migrate.yml
+++ b/.github/workflows/flyway-migrate.yml
@@ -16,7 +16,7 @@ jobs:
       FLYWAY_URL: jdbc:sqlserver://${{secrets.AWS_RDS_ENDPOINT}}:1433;authentication=sqlPassword;databaseName=ApitelDB
       FLYWAY_USER: ${{ secrets.DB_USERNAME }}
       FLYWAY_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      FLYWAY_LOCATION: filesystem:database/flyway
+      FLYWAY_LOCATION: filesystem:migrations/sql
     defaults:
       run:
         shell: bash
