--- a/.github/workflows/deploy-partner-service.yml
+++ b/.github/workflows/deploy-partner-service.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Zip the build
         run: |
           cd build
-          zip -r ./build.zip .
+           zip -r build.zip .
 
       - name: List current directory
         run: ls -la
