--- a/.github/workflows/deploy-portal.yml
+++ b/.github/workflows/deploy-portal.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Zip the build folder
         working-directory: bank-manager-portal
-        run: zip -r build.zip build server.js package.json package-lock.json
-
+        run: zip -r build.zip build server.js package.json package-lock.json .ebextensions
+        
       - name: Get SHA
         working-directory: bank-manager-portal
         id: get_sha
