--- a/.github/workflows/terraform-apply-api.yml
+++ b/.github/workflows/terraform-apply-api.yml
@@ -17,7 +17,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v1.7.0
         with:
           role-to-assume: ${{ secrets.AWS_ROLE }}
-          role-session-name: GITHUB_ACTION_EBS
+          role-session-name: GITHUB_ACTION_RDS
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Validate Identity with AWS
