add back permissions

--- a/.github/workflows/terraform-apply-api.yml
+++ b/.github/workflows/terraform-apply-api.yml
@@ -3,6 +3,11 @@ name: "Create Partner Service Elastic Beanstalk"
 on:
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  pull-requests: write
+
 jobs:
   createEB:
     runs-on: ubuntu-latest
