--- a/.github/workflows/deploy-partner-service.yml
+++ b/.github/workflows/deploy-partner-service.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           aws_access_key: "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws_secret_key: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          application_name: apitel-partner-service
-          environment_name: Apitel-partner-service-env
+          application_name: ApitelPartnerService
+          environment_name: ApitelPartnerServiceEnv
           version_label: "app-${{ github.sha }}"
           region: eu-west-1
           deployment_package: build.zip
