--- a/.github/workflows/terraform-apply-api.yml
+++ b/.github/workflows/terraform-apply-api.yml
@@ -1,4 +1,4 @@
-name: "Create Partner Service Elastic Beanstalk"
+name: "Terraform Create Partner Service on Elastic Beanstalk"
 
 on:
   workflow_dispatch:
