--- a/reporting-service/src/main/resources/application.properties
+++ b/reporting-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+spring.config.import=optional:file:env.properties
 spring.application.name=reporting-service
-server.port=3002
+spring.datasource.url=${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=ALWAYS
