--- a/reporting-service/pom.xml
+++ b/reporting-service/pom.xml
@@ -74,6 +74,18 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-oauth2-client</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.security</groupId>
+		<artifactId>spring-security-oauth2-jose</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
