Arinaho/feature/hand of zeus endpoints (#29)
* time, start and reset endpoints

* time, reset and start endpoint

* git ignore

--- a/main-banking-service/src/main/resources/application.properties
+++ b/main-banking-service/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.application.name=main-banking-service
-# server.port=3001
+spring.config.import=optional:file:env.properties
+spring.application.name=reporting-service
+spring.datasource.url=${DB_DATABASE}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.format_sql=true
+server.error.include-message=ALWAYS
+
