--- a/bank-partner-service/.env
+++ b/bank-partner-service/.env
@@ -5,3 +5,11 @@ DB_NAME=apitel-bank-local-db
 
 # Should be false in production.
 DB_TRUST_CERT=false
+
+SQS_ACCESS_KEY=test
+SQS_SECRET_KEY=test
+SQS_REGION=us-east-1
+SQS_SERVICE_URL=http://localstack-main:4566
+
+SQS_OUTGOING_PAYMENTS=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/sqs-outgoing-payments
+SQS_DEPOSITS_PENDING_VERIFICATION=http://sqs.us-east-1.localhost.localstack.cloud:4566/000000000000/sqs-deposits-pending-verification
