--- a/main-banking-service/src/main/resources/application.properties
+++ b/main-banking-service/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 spring.config.import=optional:file:env.properties
-spring.application.name=reporting-service
 spring.datasource.url=${DB_DATABASE}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=ALWAYS
 
+spring.application.name=main-banking-service
+server.port=3001
+
+# These are local dev credentials only
+camel.component.aws2-sqs.access-key=test
+camel.component.aws2-sqs.secret-key=test
+camel.component.aws2-sqs.region=us-east-1
+
+apitel.localstack-url=http://localstack-main:4566
+
+apitel.commercial-bank-deposits-url=http://localhost:3001/mock-commercial-deposit
+apitel.apitel-bank-deposits-url=http://bank-partner-service:3003/api/transactions/deposits
