--- a/main-banking-service/pom.xml
+++ b/main-banking-service/pom.xml
@@ -73,6 +73,29 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+
+    <dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-aws2-sqs-starter</artifactId>
+			<version>4.6.0</version>
+    </dependency>
+    <dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sqs</artifactId>
+			<version>2.26.14</version>
+    </dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-http-starter</artifactId>
+			<version>4.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-gson-starter</artifactId>
+			<version>4.6.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
