Reply On Deposits

--- a/main-banking-service/src/main/resources/application.properties
+++ b/main-banking-service/src/main/resources/application.properties
@@ -16,5 +16,6 @@ camel.component.aws2-sqs.region=us-east-1
 apitel.localstack-url=http://localstack-main:4566
 
 apitel.commercial-bank-deposits-url=http://localhost:3001/mock-commercial-deposit
+apitel.commercial-bank-deposits-reply-url=http://localhost:3001/mock-commercial-deposit-reply
 apitel.apitel-bank-deposits-url=http://bank-partner-service:3003/api/transactions/deposits
 apitel.apitel-make-payment-url=http://bank-partner-service:3003/api/transactions/payments
