Register with SARS on start

--- a/main-banking-service/pom.xml
+++ b/main-banking-service/pom.xml
@@ -95,6 +95,11 @@
 			<artifactId>camel-gson-starter</artifactId>
 			<version>4.6.0</version>
 		</dependency>
+			<dependency>
+		<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20210307</version>
+		</dependency>
 
 	</dependencies>
 
